* Adding capability to automatically create ECS-JSON-formatted version of the original application log files, through
the <<config-log-ecs-reformatting>> config option. This allows effortless ingestion of logs to Elasticsearch without
any further configuration. Supports log4j1, log4j2 and Logback. {pull}1261[#1261]
* Add support to Spring AMQP - {pull}1657[#1657]

[float]
===== Bug fixes
* fix sample rate rounded to zero when lower than precision - {pull}1655[#1655]
* fixed a couple of bugs with the external plugin mechanism (not documented until now) - {pull}1660[#1660]
* Update to async-profiler 1.8.4 to prevent crashes on Java 7 - {pull}1678[#1678]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.21.0]]
==== 1.21.0 - 2021/02/09

[float]
===== Breaking changes
* Following PR {pull}1650[#1650], there are two slight changes with the <<config-server-url>> and <<config-server-urls>>
configuration options:
    1.  So far, setting `server_urls` with an empty string would allow the agent to work normally, apart from any action
        that requires communication with the APM Server, including the attempt to fetch a central configuration.
        Starting in this agent version, setting `server_urls` to empty string doesn't have any special meaning, it is
        the default expected configuration, where `server_url` will be used instead. In order to achieve the same
        behaviour, use the new <<config-disable-send>> configuration.
    2.  Up to this version, `server_url` was used as an alias to `server_urls`, meaning that one could potentially set
        the `server_url` config with a comma-separated list of multiple APM Server addresses, and that would have been a
        valid configuration. Starting in this agent version, `server_url` is a separate configuration, and it only accepts
        Strings that represent a single valid URL. Specifically, empty strings and commas are invalid.

[float]
===== Features